--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>PhoneGap may not a good title, but good as a placeholder</title>
+    <title>PhoneGap may not a good title, but good as a placeholder - Sure</title>
     <link rel="stylesheet" href="stylesheet/master.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href="stylesheet/tetris.css"	rel="stylesheet" type="text/css">
 	<link href="tetris.ico" rel="shortcut icon">
